Bug 1570900 - Remove mStreamTimeOffset and friends from DecodedStream. r=jib

This hasn't been needed since the last larger refactor of DecodedStream
(bug 1423241), but got incorporated wrongly with bug 1493613.

When DecodedStream is Stop()ed and then Start()ed, a track is added to the graph
with a playout position starting at 0, and mStartTime is set to the starting
position, i.e., the seeked position in case of a seek or 0 if decoding from the
start of a file.

Hence, the reported position by DecodedStream should be mStartTime plus the last
reported output time of the tracks.

mStreamTimeOffset was offseting the tracks' reported output time further, so
DecodedStream was reporting a too large number.

Differential Revision: https://phabricator.services.mozilla.com/D40626

--HG--
extra : moz-landing-system : lando