dom/media/mediasink/DecodedStream.h
@@ -75,7 +75,6 @@ class DecodedStream : public MediaSink {
   void SendAudio(double aVolume, const PrincipalHandle& aPrincipalHandle);
   void SendVideo(const PrincipalHandle& aPrincipalHandle);
   void ResetVideo(const PrincipalHandle& aPrincipalHandle);
-  StreamTime SentDuration();
   void SendData();
   void NotifyOutput(int64_t aTime);
 
@@ -113,7 +112,6 @@ class DecodedStream : public MediaSink {
 
   media::NullableTimeUnit mStartTime;
   media::TimeUnit mLastOutputTime;
-  StreamTime mStreamTimeOffset = 0;
   MediaInfo mInfo;
 
   MediaQueue<AudioData>& mAudioQueue;
